...
        verticalAlignment = Alignment.CenterVertically,
        horizontalArrangement = Arrangement.SpaceBetween,
    ) {
        if (onBack != null) {
            Icon(
                painter = painterResource(R.drawable.ic_solar_alt_arrow_left_bold),
                contentDescription = "返回",
                modifier = Modifier.size(28.dp).clickable(onClick = onBack),
                tint = Slate900,
            )
        } else {
            Spacer(Modifier.size(28.dp))
        }
...
